--- a/composer.json
+++ b/composer.json
@@ -9,5 +9,33 @@
             "email": "a.clyde@elsevier.com"
         }
     ],
-    "require": {}
+    "repositories": [{
+        "type": "package",
+        "package": {
+            "name": "json-schema/JSON-Schema-Test-Suite",
+            "version": "1.2.0",
+            "source": {
+                "url": "https://github.com/json-schema/JSON-Schema-Test-Suite",
+                "type": "git",
+                "reference": "1.2.0"
+            }
+        }
+    }],
+    "require": {
+        "php" : "^5.5 || ^7.0"
+    },
+    "require-dev": {
+        "json-schema/JSON-Schema-Test-Suite": "1.2.0",
+        "phpunit/phpunit": "^4.8.36",
+        "hamcrest/hamcrest-php": "^2.0"
+    },
+    "autoload": {
+        "psr-4": { "Elsevier\\JSONSchemaPHPGenerator\\": "src/" }
+    },
+    "autoload-dev": {
+        "psr-4": { "Elsevier\\JSONSchemaPHPGenerator\\Tests\\": "tests/" }
+    },
+    "scripts": {
+        "test" : "vendor/bin/phpunit"
+    }
 }
