--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         }
     }],
     "require": {
-        "php" : "^5.5 || ^7.0"
+        "php" : "^5.5 || ^7.0",
+        "league/flysystem": "^1.0"
     },
     "require-dev": {
         "json-schema/JSON-Schema-Test-Suite": "1.2.0",
