--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,9 @@
     }],
     "require": {
         "php" : "^5.5 || ^7.0",
-        "league/flysystem": "^1.0"
+        "league/flysystem": "^1.0",
+        "nette/php-generator": "2.3.*",
+        "nette/utils": "2.3.*"
     },
     "require-dev": {
         "json-schema/JSON-Schema-Test-Suite": "1.2.0",
