--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,10 @@
         "psr-4": { "Elsevier\\JSONSchemaPHPGenerator\\": "src/" }
     },
     "autoload-dev": {
-        "psr-4": { "Elsevier\\JSONSchemaPHPGenerator\\Tests\\": "tests/" }
+        "psr-4": { "Elsevier\\JSONSchemaPHPGenerator\\Tests\\": "tests/" },
+        "files": [
+            "./vendor/hamcrest/hamcrest-php/hamcrest/Hamcrest.php"
+        ]
     },
     "scripts": {
         "test" : "vendor/bin/phpunit"
