Extracted code creation (#2)
* Extracted code creation

* Refactor to pass namespace in

* Remove namespacing from hamcrest matchers

* Rename example to SingleIntegerProperty

* Add support for string types

* Correct integer test to use number as the type

* Add support for boolean

* Handle enum with single value as a constant

* Refactor test names

* Add multi-value enum to target class

* Add generator for enums

* Create an exception

* Add custom matcher to clean up tests

* Fix formatting, add docblocks etc

* Ensure example files are linted

* Formatting following PR

* Remove empty constructor comments in generated code

--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,11 @@
         "psr-4": { "Elsevier\\JSONSchemaPHPGenerator\\": "src/" }
     },
     "autoload-dev": {
-        "psr-4": { "Elsevier\\JSONSchemaPHPGenerator\\Tests\\": "tests/" }
+        "psr-4": { "Elsevier\\JSONSchemaPHPGenerator\\Tests\\": "tests/" },
+        "files": [
+            "./vendor/hamcrest/hamcrest-php/hamcrest/Hamcrest.php",
+            "./tests/Matchers/matchers.php"
+        ]
     },
     "scripts": {
         "test" : "vendor/bin/phpunit"
