--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "league/flysystem": "^1.0",
         "nette/php-generator": "2.3.*",
         "nette/utils": "2.3.*",
-        "justinrainbow/json-schema": "^5.2"
+        "justinrainbow/json-schema": "^5.2",
+        "symfony/console": "^3.3"
     },
     "require-dev": {
         "json-schema/JSON-Schema-Test-Suite": "1.2.0",
@@ -45,5 +46,8 @@
     },
     "scripts": {
         "test" : "vendor/bin/phpunit"
-    }
+    },
+    "bin": [
+        "bin/php-json-schema-generate"
+    ]
 }
