--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
     "require-dev": {
         "json-schema/JSON-Schema-Test-Suite": "1.2.0",
         "phpunit/phpunit": "^4.8.36",
-        "hamcrest/hamcrest-php": "^2.0"
+        "hamcrest/hamcrest-php": "^2.0",
+        "squizlabs/php_codesniffer": "^3.1"
     },
     "autoload": {
         "psr-4": { "Elsevier\\JSONSchemaPHPGenerator\\": "src/" }
@@ -45,7 +46,8 @@
         ]
     },
     "scripts": {
-        "test" : "vendor/bin/phpunit"
+        "test": "vendor/bin/phpunit",
+        "lint": "vendor/bin/phpcs --standard=PSR2 --exclude=Generic.Files.LineLength src/"
     },
     "bin": [
         "bin/php-json-schema-generate"
