--- a/composer.json
+++ b/composer.json
@@ -46,7 +46,7 @@
         ]
     },
     "scripts": {
-        "test": "vendor/bin/phpunit",
+        "test": "vendor/bin/phpunit --testdox",
         "lint": "vendor/bin/phpcs --standard=PSR2 --exclude=Generic.Files.LineLength src/"
     },
     "bin": [
