--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,9 @@
         "nette/php-generator": "2.3.*",
         "nette/utils": "2.3.*",
         "justinrainbow/json-schema": "^5.2",
-        "symfony/console": "^3.3"
+        "monolog/monolog": "^1.23",
+        "symfony/console": "^3.3",
+        "psr/log": "^1.0"
     },
     "require-dev": {
         "json-schema/JSON-Schema-Test-Suite": "1.2.0",
