Add initial test to test JSON output

--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,10 @@
         "psr-4": { "Elsevier\\JSONSchemaPHPGenerator\\": "src/" }
     },
     "autoload-dev": {
-        "psr-4": { "Elsevier\\JSONSchemaPHPGenerator\\Tests\\": "tests/" },
+        "psr-4": {
+            "Elsevier\\JSONSchemaPHPGenerator\\Tests\\": "tests/",
+            "Elsevier\\JSONSchemaPHPGenerator\\Examples\\": "tests/examples/"
+        },
         "files": [
             "./vendor/hamcrest/hamcrest-php/hamcrest/Hamcrest.php",
             "./tests/Matchers/matchers.php"
