--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
     }],
     "require": {
         "php" : "^5.5 || ^7.0",
+        "ext-mbstring": "*",
         "league/flysystem": "^1.0",
         "nette/php-generator": "2.3.*",
         "nette/utils": "2.3.*",
