Replace Andy's email with generic service account

--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,8 @@
     "license": "Apache-2.0",
     "authors": [
         {
-            "name": "Andy Clyde",
-            "email": "a.clyde@elsevier.com"
+            "name": "BTS eCommerce Services",
+            "email": "bts.ecommerce.services@elsevier.com"
         }
     ],
     "repositories": [{
