--- a/composer.json
+++ b/composer.json
@@ -26,8 +26,8 @@
         "ext-json": "*",
         "ext-mbstring": "*",
         "league/flysystem": "^1.0",
-        "nette/php-generator": "2.*",
-        "nette/utils": "2.*",
+        "nette/php-generator": "^3.1.4",
+        "nette/utils": "^3.1.2",
         "justinrainbow/json-schema": "^5.2",
         "monolog/monolog": "^1.23",
         "symfony/console": "^3.3",
