--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
         "ext-json": "*",
         "ext-mbstring": "*",
         "league/flysystem": "^2.0",
-        "nette/php-generator": "^3.1.4",
+        "nette/php-generator": "^2.4.0 || ^3.1.4",
         "nette/utils": "^3.1.2",
         "justinrainbow/json-schema": "^5.2",
         "monolog/monolog": "^1.23",
